gccida/c0/want_to_gcse_p
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/want_to_gcse_p/src/gcse.c:1786:29: error: use of undeclared identifier 'machine_mode'
if ( general_operand( xa, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)xa)) ) 
                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/want_to_gcse_p/src/gcse.c:1786:44: error: expected expression
if ( general_operand( xa, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)xa)) ) 
                                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/want_to_gcse_p/src/gcse.c:1790:7: error: use of undeclared identifier 'want_to_gcse_p_test_insn'
if ( !want_to_gcse_p_test_insn ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/want_to_gcse_p/src/gcse.c:1792:30: error: invalid suffix 'xmode' on integer constant
v1 = gen_rtx_REG( *(short *)0xmode, 106); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/want_to_gcse_p/src/gcse.c:1794:1: error: use of undeclared identifier 'want_to_gcse_p_test_insn'
want_to_gcse_p_test_insn = make_insn_raw( v2); 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/want_to_gcse_p/src/gcse.c:1795:14: error: use of undeclared identifier 'want_to_gcse_p_test_insn'
*( _QWORD *)&want_to_gcse_p_test_insn[1] = 0LL; 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/want_to_gcse_p/src/gcse.c:1796:1: error: use of undeclared identifier 'want_to_gcse_p_test_insn'
want_to_gcse_p_test_insn[1].fld[0].rtwint = 0LL; 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/want_to_gcse_p/src/gcse.c:1797:20: error: use of undeclared identifier 'want_to_gcse_p_test_insn'
ggc_add_rtx_root( &want_to_gcse_p_test_insn, 1); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/want_to_gcse_p/src/gcse.c:1799:30: error: use of undeclared identifier 'want_to_gcse_p_test_insn'
**( _DWORD **)( *( _QWORD *)&want_to_gcse_p_test_insn[2] + 8LL) = ( ( unsigned __int8)BYTE2( *( _DWORD *)xa) << 16) | **( _DWORD **)( *( _QWORD *)&want_to_gcse_p_test_insn[2] + 8LL) & 0xFF00FFFF; 
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/want_to_gcse_p/src/gcse.c:1799:148: error: use of undeclared identifier 'want_to_gcse_p_test_insn'
**( _DWORD **)( *( _QWORD *)&want_to_gcse_p_test_insn[2] + 8LL) = ( ( unsigned __int8)BYTE2( *( _DWORD *)xa) << 16) | **( _DWORD **)( *( _QWORD *)&want_to_gcse_p_test_insn[2] + 8LL) & 0xFF00FFFF; 
                                                                                                                                                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/want_to_gcse_p/src/gcse.c:1800:28: error: use of undeclared identifier 'want_to_gcse_p_test_insn'
*( _QWORD *)( *( _QWORD *)&want_to_gcse_p_test_insn[2] + 16LL) = xa; 
                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/want_to_gcse_p/src/gcse.c:1801:26: error: use of undeclared identifier 'want_to_gcse_p_test_insn'
icode = recog( *( rtx *)&want_to_gcse_p_test_insn[2], want_to_gcse_p_test_insn, &num_clobbers); 
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/want_to_gcse_p/src/gcse.c:1801:55: error: use of undeclared identifier 'want_to_gcse_p_test_insn'
icode = recog( *( rtx *)&want_to_gcse_p_test_insn[2], want_to_gcse_p_test_insn, &num_clobbers); 
                                                      ^
13 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/want_to_gcse_p/src/obj/gcse.o] Error 1
